updated membership api, updated swagger
