# app/models/epicenter.rb
@@ -12,10 +12,36 @@ class Epicenter < ActiveRecord::Base
   has_many :memberships, as: :owner
   has_many :membershipcards, as: :owner, :dependent => :destroy
     
+
   def type
     return self.class.name
   end
 
+
+  ##
+  # Determins if an epicenter can apply for a membership
+  # Everyone can apply to 'new circle movement' (fruit = kroner)
+  # Otherwise we need to check if the user has enough of the relevant fruit
+  #
+  # @param [membership] to apply for
+  #
+  def can_apply_for?(membership)
+    if membership.owner.mother_id == nil
+      return true
+    else
+      fruit = membership.owner.membership_fee_fruit
+      return self.has_enough_fruit?(fruit.id, membership.fee)
+    end
+  end
+
+
+  ##
+  # Gives an applicant a membership to an Epicenter
+  # Upon successful fruit transaction (through FruitBasket) applicant receives a membershipcard for the membership
+  #
+  # @param [applicant] e.g. User, Tribe, Movement (applying for Epicenter membership)
+  # @param [membership], the Epicenter membership in question
+  #
   def give_membership_to(applicant, membership)
     applicant.give_fruit_to(self, self.membership_fee_fruit.id, membership.fee)
     card = applicant.membershipcards.find_or_initialize_by(:epicenter => self, :membership_id => membership.id)
@@ -31,7 +57,7 @@ class Epicenter < ActiveRecord::Base
   def membership_fee_fruit
     case self.class.name
     when "Movement"
-      if self.mother == self
+      if self.mother == nil or self.mother == self
         return Fruit.find_by(:owner_id => nil, :owner_type => 'Society')
       else
         return self.mother.fruit
