# db/schema.rb
@@ -10,7 +10,7 @@
 #
 # It's strongly recommended that you check this file into your version control system.
 
-ActiveRecord::Schema.define(version: 2018_10_27_143040) do
+ActiveRecord::Schema.define(version: 2018_11_05_192032) do
 
   # These are extensions that must be enabled in order to support this database
   enable_extension "plpgsql"
@@ -50,6 +50,7 @@ ActiveRecord::Schema.define(version: 2018_10_27_143040) do
     t.float "monthly_decay"
     t.datetime "created_at", null: false
     t.datetime "updated_at", null: false
+    t.integer "monthly_yield", default: 100
     t.index ["owner_id", "owner_type"], name: "index_fruits_on_owner_id_and_owner_type"
   end
 
